--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -73,6 +73,10 @@
             <a class="p-2 text-muted" href="#"></a>
             <a class="p-2 text-muted" href="{{url_for("users.logout")}}">Log out</a>
           {% endif %}
+          {% if current_user.is_authenticated %}
+          <a class="p-2 text-muted" href="#"></a>
+          <a class="p-2 text-muted" href="{{url_for("users.update")}}">Update StockPocket</a>
+        {% endif %}
         </nav>
       </div>
 
