--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -3,84 +3,77 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Stock Pocket</title>
+    <title>StockPocket</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <!-- JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 
-    <!-- Custom styles -->
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
-    <link href="../static/blog.css" rel="stylesheet">
-    <link href="../static/carousel.css" rel="stylesheet">
 
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-dark bg-dark">
+        <div class="container">
+              <div class="navbar-header">
 
-    <div class="container">
+                <a href="#">
+                  <img src="static/logo1.jpg" width="120" height="80">
+                </a>
+                <a class= "text" href="#"><h3></h3></a>
 
-      <header class="blog-header py-3">
-        <div class="row flex-nowrap justify-content-between align-items-center">
-
-          <div class="col-4 pt-1">
-            <a class="text-muted" href="{{url_for("core.info")}}">Quotes</a>
-          </div>
-
-          <div class="text-center">
-            <a class="text-muted" href="#">
-              <img src="../static/logo.jpeg" width="40" height="40" align="left">
-            </a>
-            <a class="blog-header-logo text-dark" ref="{{url_for("core.index")}}">Stock Pocket</a>
-          </div>
-
-          {% if not current_user.is_authenticated %}
-            <div class="col-4 d-flex justify-content-end align-items-center">
-              <a class="btn btn-sm btn-outline-secondary" href="{{url_for("users.register")}}">Sign up</a>
-            </div>
-          {% endif %}
-
-          {% if current_user.is_authenticated %}
-            <div class="col-4 d-flex justify-content-end align-items-center">
+              </div>
               <a href="#"></a>
-            </div>
-          {% endif %}
+              <a href="#"></a>
+              <a href="#"></a>
+              <a href="#"></a>
+              <!--<a class="text" href="{{url_for("core.info")}}">Quotes</a>-->
+              <a class="text" href="{{url_for("core.index")}}">Home</a>
+              <a class="text" href="{{url_for("users.sercom")}}">Compare</a>
+              {% if current_user.is_authenticated %}
+                <a class="text" href="{{url_for("users.addStock")}}">Add Stock</a>
+              {% endif %}
+              {% if not current_user.is_authenticated %}
+                <a class="text" href="{{url_for("users.login")}}">Log in</a>
+              {% endif %}
+              {% if current_user.is_authenticated %}
+                <a class="text" href="{{url_for("users.logout")}}">Log out</a>
+              {% endif %}
+          </div>
+      </nav>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <br>
+            {% if not current_user.is_authenticated %}
+            <h1 class="text1">STOCKPOCKET</h1>
+            <h4>Don't be Late, Investing is Great</h4>
+            {% endif %}
+          </div>
+          <div class="col-sm-6 divi2">
+
+            <br>
+
+
+            {% if not current_user.is_authenticated %}
+              <h4>New User?</h4>
+              <h5>SignUp Here</h5>
+              <a class="btn btn-signup" href="{{url_for("users.register")}}">Sign up</a>
+            {% endif %}
+            {% if current_user.is_authenticated %}
+              <a class="p-2 text-muted" href="{{url_for("users.update")}}">Update StockPocket</a>
+            {% endif %}
+
+          </div>
 
         </div>
+
+      </div>
       </header>
 
-      <div class="nav-scroller py-1 mb-2">
-        <nav class="nav d-flex justify-content-between">
-          <a class="p-2 text-muted" href="{{url_for("core.index")}}">Compare Stock</a>
-          {% if current_user.is_authenticated %}
-            <a class="p-2 text-muted" href="{{url_for("users.addStock")}}">Add Stock</a>
-          {% endif %}
-          <a class="p-2 text-muted" href="#"></a>
-          <a class="p-2 text-muted" href="#"></a>
-          <a class="p-2 text-muted" href="#"></a>
-          <a class="p-2 text-muted" href="#"></a>
-          <a class="p-2 text-muted" href="#"></a>
-          <a class="p-2 text-muted" href="#"></a>
-          <a class="p-2 text-muted" href="#"></a>
-          {% if not current_user.is_authenticated %}
-            <a class="p-2 text-muted" href="{{url_for("users.login")}}">Log in</a>
-          {% endif %}
-          {% if current_user.is_authenticated %}
-            <a class="p-2 text-muted" href="#"></a>
-            <a class="p-2 text-muted" href="{{url_for("users.logout")}}">Log out</a>
-          {% endif %}
-          {% if current_user.is_authenticated %}
-          <a class="p-2 text-muted" href="#"></a>
-          <a class="p-2 text-muted" href="{{url_for("users.update")}}">Update StockPocket</a>
-        {% endif %}
-        </nav>
-      </div>
 
-    </div>
       {% block content %}
 
       {% endblock %}
