--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -1,32 +1,49 @@
 {% extends "base.html" %}
 {% block content %}
 
-<br>
-<br>
 <div class="container text-center">
+  <br>
+  <br>
+  <br>
+  <div class="row justify-content-center">
+    <div class="col-24 col-sm-6 col-sm-3">
+      <br>
+      <h3>PLEASE LOGIN</h3>
+      <form method="POST">
+        {{form.hidden_tag()}}
 
-  <h3 class="h3 mb-3 font-weight-normal">Please log in</h3>
+        <div class="form-group">
+          {{form.mobile.label(class="form-group")}} {{form.mobile(class="form-control")}}
+        </div>
 
-  <div class="col-md-4 offset-md-4">
-    <form method="POST">
+        <div class="form-group">
+          {{form.password.label(class="form-group")}} {{form.password(class="form-control")}}
+        </div>
 
-      {{form.hidden_tag()}}
+        <div class="form-group">
+          {{form.submit(class="btn btn-secondary btn-block")}}
+        </div>
 
-      <div class="form-group">
-        {{form.mobile.label(class="form-group")}} {{form.mobile(class="form-control")}}
+
+
+        </form>
+        <br>
+
+
+    </div>
+    <div class="col-sm-6">
+
+
+      <div class="row justify-content-center">
+      <img src="static/login1.jpg" class= "img-responsive img-main">
       </div>
 
-      <div class="form-group">
-        {{form.password.label(class="form-group")}} {{form.password(class="form-control")}}
-      </div>
+    </div>
 
-      <div class="form-group">
-        {{form.submit(class="btn btn-secondary")}}
-      </div>
-
-    </form>
   </div>
 
 </div>
+
+
 
 {% endblock %}
