--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -5,7 +5,7 @@
 <br>
 <div class="container text-center">
 
-  <h3 class="h3 mb-3 font-weight-normal">Please register</h3>
+  <h3 class="h3 mb-3 font-weight-normal">Please Register</h3>
 
   <div class="col-md-4 offset-md-4">
     <form method="POST">
