--- a/project/templates/compare.html
+++ b/project/templates/compare.html
@@ -17,16 +17,16 @@
 
     </tr>
     <tr>
-      <td></td>
+      <th>Current Value</th>
       <td>{{i11}}</td>
       <td>{{i12}}</td>
     </tr>
-    
+
     {% for names,ids,id in tv %}
 
 
     <tr>
-    <td> {{names}} </td>
+    <th> {{names}} </th>
     <td> {{ids}} </td>
     <td>{{id}}</td>
     </tr>
