--- a/project/templates/showpocket.html
+++ b/project/templates/showpocket.html
@@ -6,7 +6,7 @@
 
 
 <div class="container">
-  <table style="width:25%" border="3px">
+  <table class = "center" style="width:25%" border="1px">
     <tr>
       <th> Your Stocks</th>
 
