--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -63,7 +63,7 @@
               <a class="btn btn-signup" href="{{url_for("users.register")}}">Sign up</a>
             {% endif %}
             {% if current_user.is_authenticated %}
-              <a class="p-2 text-muted" href="{{url_for("users.update")}}">Update StockPocket</a>
+              <a class="btn btn-update" href="{{url_for("users.update")}}">Update StockPocket</a>
             {% endif %}
 
           </div>
