--- a/project/templates/company.html
+++ b/project/templates/company.html
@@ -9,7 +9,7 @@
   <br>
   <br>
   <p>{{description}}</p>
-  <table class="center">
+  <table class="center formatt">
     {% for names,ids in tv %}
     <tr>
     <td> {{names}} </td>
