--- a/project/static/style.css
+++ b/project/static/style.css
@@ -96,3 +96,30 @@ div.Jumbotron{
   padding: 10px;
   background-color: #9acd32;
   border: none;
+}
+.formatt {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.formatt td, .formatt th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.formatt tr:nth-child(even){background-color: #f2f2f2;}
+
+.formatt tr:hover {background-color: #ddd;}
+
+.formatt th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #9acd32;
+  color: white;
+}
+.username_font{
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
