--- a/project/templates/compare.html
+++ b/project/templates/compare.html
@@ -5,7 +5,7 @@
   <br>
   <br>
   <p>{{description}}</p>
-  <table class="center">
+  <table class="center formatt">
     <tr>
       <td></td>
       <td><h3>{{company_name1}}</h3></td>
